force-app/main/default/objects/Feature_Layers__mdt/Feature_Layers__mdt.object-meta.xml
<CustomObject>
    <label>Feature Layer</label>
    <pluralLabel>Feature Layers</pluralLabel>
</CustomObject>