force-app/main/default/objects/Feature_Layers__mdt/fields/popupTemplate__c.field-meta.xml
<CustomField>
    <fullName>popupTemplate__c</fullName>
    <label>popupTemplate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>