force-app/main/default/objects/Feature_Layers__mdt/fields/renderer__c.field-meta.xml
<CustomField>
    <fullName>renderer__c</fullName>
    <label>renderer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>